# flint

./: MUJOCO_LOG.TXT
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/flintrobot_description/share/flintrobot_description/: package.bash  package.dsv  package.ps1  (+2 more)
install/mujoco_sim/lib/: ur5e_control
log/: latest_build
src/flintrobot_description/: package.xml  setup.cfg  setup.py
src/flintrobot_description/launch/: display_rviz2.launch.py
src/flintrobot_description/meshes/: flint_body.stl  flint_good_hand.stl  flint_hand_finger_joint0.stl  flint_hand_finger_joint1.stl  flint_hand_thumb_joint3.stl  flint_joint5.stl  flint_joint6.stl  flint_joint8.stl  flint_neck2.stl  flint_wheel1.stl  flint_wheel2.stl
src/flintrobot_description/urdf/: flintrobot.xml  flintrobot_base.urdf  flintrobot_base_no1.urdf  flintrobot_base_no3.urdf
src/mujoco_py/: accelerations.xlsx  data_collection.py  efforts.xlsx  positions.xlsx  setup.cfg  setup.py  velocities.xlsx
src/mujoco_py/mujoco_py/: param_identify.py  ur5e_get_regression.py
src/mujoco_sim/: CMakeLists.txt
src/mujoco_sim/include/: get_Regression.hpp
src/mujoco_sim/src/: .~PA.xlsx  PA.xlsx  flint_control.cpp  flint_get_Regressorb.cpp  fourier_series.xlsx  fourier_series_flint.xlsx  get_Regression.cpp  ob_Yr.txt  ur5e_control.cpp
src/ur5e_description/: package.xml  setup.py
src/ur5e_description/launch/: display.launch  gazebo.launch
src/ur5e_description/meshes/: link3.STL  link4.STL
src/ur5e_description/urdf/: ur5e_description.csv  ur5e_description.urdf  ur5e_description.xml
(+42 files in other folders)
